# Rust-python-arima

./: CLAUDE.md  README.md
planner/: INITIAL_PARAMETER_ESTIMATION.md  RUST_SARIMAX_IMPLEMENTATION_PLAN.md
planner/complete/: PHASE1_COMPLETION_REPORT.md  PROJECT_CHECKLIST.md
planner/ver1/: FEASIBILITY_ASSESSMENT.md  PYTHON_IMPLEMENTATION_PLAN.md  RUST_IMPLEMENTATION_PLAN.md
planner/ver1.1/: FEASIBILITY_ASSESSMENT.md  PYTHON_IMPLEMENTATION_PLAN.md  RUST_IMPLEMENTATION_PLAN.md
planner/ver4/: PARAMETER_SUMMARY_IMPLEMENTATION_PLAN_2026-02-22.md  SARIMAX_PARITY_REVIEW_2026-02-22.md  SARIMA_PERFORMANCE_ROOT_CAUSE_2026-02-22.md  SARIMA_PERF_IMPL_SPEC_2026-02-22.md  SARIMA_PERF_V2_SPEC_2026-02-22.md  VER4_MISSING_INFO_AUDIT_2026-02-22.md  (+1 more)
sarimax_rs/: .gitignore  BENCHMARK_SPEC.md  Cargo.toml  benchmark_comprehensive.py  benchmark_higher_order.py  debug_loglike.py  debug_mismatch.py  fit_summary_report.md  pyproject.toml
sarimax_rs/benches/: bench_fit.rs  bench_kalman.rs
sarimax_rs/docs/: PERF_DIAGNOSIS.md  api_reference.md
sarimax_rs/python/sarimax_py/: __init__.py  model.py
sarimax_rs/python_tests/: bench_readme.py  conftest.py  generate_fixtures.py  run_fit_summary.py  test_batch.py  test_exog.py  test_fit.py  test_forecast.py  test_high_order_accuracy.py  test_input_validation.py  test_loglike.py  test_model.py  test_multi_order_accuracy.py  test_parameter_summary.py  test_smoke.py
sarimax_rs/src/: batch.rs  error.rs  forecast.rs  initialization.rs  kalman.rs  lib.rs  optimizer.rs  params.rs  polynomial.rs  score.rs  start_params.rs  state_space.rs  types.rs
sarimax_rs/tests/fixtures/: statsmodels_fit_reference.json  statsmodels_forecast_reference.json  statsmodels_reference.json
(+3 files in other folders)
