[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sarimax-rs"
version = "0.1.0"
requires-python = ">=3.10"
description = "High-performance SARIMAX via Rust + PyO3"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "statsmodels>=0.14",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "maturin>=1.7",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sarimax_rs"

[tool.pytest.ini_options]
testpaths = ["python_tests"]
markers = [
    "nightly: marks tests as nightly-only (deselect with '-m \"not nightly\"')",
]
